# RegTrace

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pnpm-lock.yaml  regtrace.code-workspace
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/tests/: test_health.py
backend/app/tests/component/: test_health.py
backend/app/tests/integration/: conftest.py  test_ready.py
backend/app/tests/unit/: test_config.py
docker/: api.Dockerfile  nginx.conf  web.Dockerfile
frontend/: eslint.config.js  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.component.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
frontend/e2e/: ready.spec.ts
frontend/scripts/: e2e.sh
frontend/src/: App.tsx  main.tsx
frontend/src/app/: App.component.test.tsx  App.tsx
frontend/src/shared/: format.ts  format.unit.test.ts
frontend/src/shared/api/: health.integration.test.ts
frontend/src/test/: setup.integration.ts
frontend/src/test/msw/: handlers.ts
infra/: README.md
